# AS-UR10e-control-system

./: .cursorrules  .gitignore  CMakeLists.txt  OLD FACE CHOPPY.py  README.md  cartesian_face_tracking.py  control_space_mouse.py  dynamic_face_tracking.py  face_heat_control.py  face_tracking_camera.py  glass_wiping_robot.py  high_freq_monitor.py  ik_integration_example.py  main.py  moveplane.py  pico_adc_reader_fixed.py  pico_adc_sampler.cpp  pico_grapher.py  piezo_anomaly_detection.py  piezo_sensor_arduino.ino  piezo_visualization_pyqtgraph.py  piezo_waveform_viewer.py  pipe_follower.py  requirements.txt  requirements_face_tracking.txt  requirements_high_freq.txt  robot_movement_demo.py  sim.py  simulation_test.py  stop_and_clear.py  system_architecture.txt  system_architecture_cpp.txt  teensy_piezo_15khz.ino  test.py  test_face_detection.py  test_face_tracking.py  test_ik_visualization.py  thermal_heat_tracking.py  ur10_sequence_controller.py  ur10e.urdf  (+4 more)
Finalized Code/: README.md  config.py  main_tracker.py  robot_controller.py
Testing Code/: CMakeLists.txt  OLD FACE CHOPPY.py  adc_sampler.cpp  control_space_mouse.py  pipe_follower.py  requirements.txt  simple_test.py  teensy_adc_sampler.ino  test.py  thermal_heat_tracking.py  urx_posevector_test.py
piezoC++/: realtime_console.cpp  realtime_graph.py  simple_console.cpp
src/: main.rs
